chore: simplify to design options only - width, gap, peak, add drag, resolve axe focus issues

--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -5,7 +5,32 @@
     width: 100%;
     position: relative;
     background: #fff;
-    gap: var(--spacing-sizing-02);
+    padding: 0 var(--spacing-sizing-04);
+
+    --gap: var(--spacing-sizing-04);
+    --item-width: 100%;
+
+    &[data-peak] {
+        --item-width: calc(100% - calc(var(--gap) * 2));
+    }
+
+    &[data-width='3/4'] {
+        --item-width: 75%;
+
+        &[data-peak] {
+            --item-width: calc(75% - calc(var(--gap) * 2));
+        }
+    }
+
+    &[data-width='1/2'] {
+        --item-width: 50%;
+
+        &[data-peak] {
+            --item-width: calc(50% - calc(var(--gap) * 1.5));
+        }
+    }
+
+    --translate-x: calc(calc(var(--current-slide) * calc(var(--item-width) + var(--gap)) * -1));
 
     [data-items-container] {
         width: 100%;
@@ -16,12 +41,12 @@
         display: flex;
         align-items: center;
         transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-        gap: var(--item-gap, var(--spacing-sizing-02));
         transform: translateX(var(--translate-x, 0));
+        gap: var(--gap);
     }
 
     [data-item-wrapper] {
-        min-width: var(--item-width, var(--spacing-sizing-14));
+        min-width: var(--item-width);
         overflow: hidden;
     }
 
